# prescient

./: .gitignore  DOCS_REPLICATION_PLAN.md
agentic_docs/: AGENTS.md  IDENTITY.md  (+6 more)
prescient/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
prescient/agent/: __init__.py  config.py  groups.py  orchestrator.py
prescient/agent/analysis/: nlp_insights.py
prescient/agent/data/: __init__.py  database_ext.py  market_data.py  rate_limiter.py  scheduler.py
prescient/agent/discovery/: __init__.py  dune_client.py  scorer.py  sentiment.py
prescient/agent/markets/: __init__.py  factory.py
prescient/agent/resolution/: __init__.py  oracle.py  receipts.py
prescient/agent/storage/: __init__.py  filecoin.py  models.py
prescient/agent/users/: __init__.py  auth.py  database.py
prescient/api/: __init__.py  main.py
prescient/api/routes/: market_data.py  users.py
prescient/docs/: MEMORY.md  PROJECT_DEFINITION.md  REQUIREMENTS.md  USER.md
prescient/dune/queries/: base_tvl.sql  governance_active.sql  protocol_launches.sql  whale_movements.sql
prescient/filecoin_archive/: discovery_399915a118429d9b.json  discovery_43dc3d816cbb88c2.json  discovery_6ba6891e490387e6.json  discovery_82678d0b547e0b4f.json  discovery_82d2b8729bd99a2c.json  discovery_9d34fffa8f863874.json  discovery_b6aa75f4f72218bc.json  discovery_b6cec863ae72d0f4.json  discovery_d780bc265c864511.json  discovery_ee3337bbfcf8bbd7.json  market_1c6dea9b956af780.json  market_271b660d87e012f2.json  market_bbe0c39db99c826d.json  prescient_index.json  user_user_3BGjIXmrpzqz4GAKaHPZteCflPe.json
prescient/frontend/: package-lock.json  package.json  tailwind.config.ts
prescient/frontend/src/: middleware.ts
prescient/frontend/src/app/: globals.css  layout.tsx  page.tsx
prescient/frontend/src/app/(app)/: layout.tsx
prescient/frontend/src/app/(app)/dashboard/: page.tsx
prescient/frontend/src/app/(app)/history/: page.tsx
prescient/frontend/src/app/(app)/info/: page.tsx
prescient/frontend/src/components/: ErrorBoundary.tsx
prescient/frontend/src/components/layout/: Footer.tsx  Navbar.tsx
prescient/frontend/src/components/sections/: CTA.tsx  FAQ.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  TechStack.tsx  Tracks.tsx
prescient/frontend/src/components/ui/: Button.tsx  GlassCard.tsx
prescient/frontend/src/lib/: api.ts  useSync.ts
prescient/tests/: __init__.py  test_filecoin.py  test_market_data.py  test_scorer.py  test_sentiment.py  test_users.py
(+11 files in other folders)
